# protobuf_ue4_cmake

./: README.md  build-windows.bat  build_protobuf.3.3.2.bat  build_protobuf.3.5.1.bat  extract_includes.bat
build_protobuf/: CMakeLists.txt
build_protobuf-lite/: CMakeLists.txt
ndk_build/: build.bat
ndk_build/jni/: Android.mk  Application.mk
src/3.12.2/google/protobuf/: map_field.h
src/3.12.2/src/google/protobuf/: arena.h
src/3.12.2/src/google/protobuf/stubs/: casts.h  common.cc  port.h
src/3.3.2/cmake/: protobuf.3.3.2_build.bat
src/3.3.2/src/google/protobuf/: arena.h  generated_message_reflection.h  map_field.h
src/3.3.2/src/google/protobuf/stubs/: common.cc
src/3.5.1/: batch_replace_string.py
src/3.5.1/src/google/protobuf/: arena.h  arena_impl.h  generated_message_reflection.h  generated_message_util.h  implicit_weak_message.h  map_field.h  type.pb.h  wire_format_lite.h
src/3.5.1/src/google/protobuf/compiler/csharp/: csharp_helpers.h
src/3.5.1/src/google/protobuf/io/: coded_stream.h
src/3.5.1/src/google/protobuf/stubs/: casts.h  common.cc  mathlimits.h  port.h
src/3.9.0/cmake/: libprotobuf-lite.cmake
src/3.9.0/src/google/protobuf/: arenastring.cc  generated_message_util.cc  generated_message_util.h
test/: build-windows.bat  protoc_gen.bat  test.proto
test/cmake/: CMakeLists.txt
test/ndk_build/: build.bat
test/ndk_build/jni/: Android.mk  Application.mk
ue4/: MyProj.Build.cs
